--- a/src/app/components/record-job-panel/record-job-panel.component.html
+++ b/src/app/components/record-job-panel/record-job-panel.component.html
@@ -66,7 +66,7 @@
     <div class="panel-footer" *ngIf="status === 'active'">
       <div class="row">
         <div class="col-sm-12 col-md-12">
-          <progressbar class="progress-striped" type="danger" value="{{progress}}"></progressbar>
+          <progressbar *ngIf="recordJob.timestampEnd" class="progress-striped" type="danger" value="{{progress}}"></progressbar>
           <div class="btn-toolbar" role="toolbar">
             <div class="btn-group" (click)="onCancel.emit(recordJob)">
               <label class="btn btn-danger"  btnRadio="Stop"><i class="glyphicon glyphicon-stop"></i></label>
