--- a/src/app/components/record-job-panel/record-job-panel.component.html
+++ b/src/app/components/record-job-panel/record-job-panel.component.html
@@ -45,13 +45,13 @@
                   </div>
                 </div>
                 <div class="col-xs-4" *ngIf="endpointMetrics[mapping.sourceIdentifier]">
-                  <div>
+                  <div *ngIf="recordJob.timestampEnd">
                     <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageCount }}
                   </div>
                   <div>
                     <span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>  {{ endpointMetrics[mapping.sourceIdentifier].messageRateSecond | number:'1.2-2' }} / sec
                   </div>
-                  <div>
+                  <div *ngIf="recordJob.timestampEnd">
                     <span class="glyphicon glyphicon-hdd" aria-hidden="true"></span> {{ endpointMetrics[mapping.sourceIdentifier].messageSizeBytes / 1024 / 1024 | number:'1.3-3' }} mb
                   </div>
                 </div>
